# doin-core

./: README.md  pyproject.toml
docs/: INSTALL.md  NETWORK.md  SCALABILITY.md  SECURITY.md  doin-paper.html
scripts/: deploy-remote.sh  deploy-testnet.sh  install.sh
src/doin_core/: __init__.py
src/doin_core/consensus/: __init__.py  deterministic_seed.py  difficulty.py  dynamic_quorum.py  finality.py  fork_choice.py  incentives.py  proof_of_optimization.py  weights.py
src/doin_core/crypto/: __init__.py  hashing.py  identity.py
src/doin_core/models/: __init__.py  block.py  coin.py  commit_reveal.py  domain.py  fee_market.py  optimae.py  payment_channel.py  quorum.py  reputation.py  resource_limits.py  task.py  transaction.py
src/doin_core/plugins/: __init__.py  base.py  loader.py
src/doin_core/protocol/: __init__.py  messages.py
tests/: test_coin.py  test_commit_reveal.py  test_consensus.py  test_crypto.py  test_deterministic_seed.py  test_difficulty.py  test_dynamic_quorum.py  test_fee_market.py  test_finality.py  test_fork_choice.py  test_identity_persistence.py  test_incentives.py  test_models.py  test_payment_channel.py  test_quorum.py  test_reputation.py  test_resource_limits.py  test_synthetic_hash.py  test_task_queue.py  test_weights.py
